implementation of getAllOrdersByMerchantId and cancelOrder use cases (OrderServiceImpl, OrderService, OrderController, OrderRepository, OrderMapper, Order. Add comment in SecurityConfig route. Simplified map loop in getAllAccounts (AccountServiceImpl)